@@ -14,8 +14,24 @@ module Rucola
       @@plugins << subclass.new
     end
     
-    def before_boot(initializer); end
-    def after_boot(initializer); end
+    def self.before_boot
+      plugins.each { |p| p.before_boot }
+    end
+    
+    def self.after_boot
+      plugins.each { |p| p.after_boot }
+    end
+    
+    def self.before_process(initializer)
+      plugins.each {|p| p.before_process(initializer) }
+    end
+    
+    def self.after_process(initializer)
+      plugins.each {|p| p.after_process(initializer) }
+    end
+    
+    def before_boot; end
+    def after_boot; end
     def before_process(initializer); end
     def after_process(initializer); end
   end
